deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-lab
  labels:
    app: delivery-lab
spec:
  selector:
    app: delivery-lab
  ports:
    - name: http
      port: 80
      targetPort: 8080
